--- a/app/src/main/res/drawable/text_select_handle_right.xml
+++ b/app/src/main/res/drawable/text_select_handle_right.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:fillColor="?attr/clrText"
+      android:fillColor="?attr/clrBtnConfig_Text"
       android:pathData="M3,3L3,12A9,9 0,0 0,12 21A9,9 0,0 0,21 12A9,9 0,0 0,12 3L3,3z"/>
 </vector>
